typescript/checker/tests/conformance/externalModules/umd8.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            314,
        ),
        hi: BytePos(
            315,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/externalModules/umd8.ts:18:5
   |
18 | let y: Foo; // OK in type position
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            360,
        ),
        hi: BytePos(
            361,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/externalModules/umd8.ts:20:5
   |
20 | let z: Foo.SubThing; // OK in ns position
   |     ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            412,
        ),
        hi: BytePos(
            415,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/externalModules/umd8.ts:21:14
   |
21 | let x: any = Foo; // Not OK in value position
   |              ^^^

